# WhatsappStats

./: .gitignore  BUGS.md  CMakeLists.txt  LICENSE  README.md  main  main.cpp  main.h
assets/: help.txt
chat/: sample-chat.txt
src/cpp/: calculateTimeDifference.cpp  calculateTimeOfDay.cpp  countWords.cpp  findLocationData.cpp  findPollData.cpp  findSenderOfMessage.cpp  globals.cpp  main.cpp
src/h/: Poll.h  calculateTimeDifference.h  calculateTimeOfDay.h  countWords.h  findLocationData.h  findPollData.h  findSenderOfMessage.h  globals.h  main.h
